# twoWheelBalanceCar

./: .gitignore  README.md
Android_code/: CMakeLists.txt  main.cpp
Android_code/http_client/: httpClient.cpp  httpClient.h
Android_code/main_window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ESP32_code/: platformio.ini
ESP32_code/lib/encoder/: encoder.cpp  encoder.h
ESP32_code/lib/http_service/: httpService.cpp  httpService.h
ESP32_code/lib/micro_ros/: microRos.cpp  microRos.h
ESP32_code/lib/motion_params_service/motion_params_service/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
ESP32_code/lib/motion_params_service/motion_params_service/srv/: motion_params_service.h
ESP32_code/lib/motion_params_service/motion_params_service/srv/detail/: motion_params_service__functions.c  motion_params_service__functions.h  motion_params_service__rosidl_typesupport_introspection_c.h  motion_params_service__struct.h  motion_params_service__type_support.c  motion_params_service__type_support.h
ESP32_code/lib/motion_status_msgs/motion_status_msgs/msg/: motion_status.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
ESP32_code/lib/motion_status_msgs/motion_status_msgs/msg/detail/: motion_status__functions.c  motion_status__functions.h  motion_status__rosidl_typesupport_introspection_c.h  motion_status__struct.h  motion_status__type_support.c  motion_status__type_support.h
ESP32_code/lib/motor/: motor.cpp  motor.h
ESP32_code/lib/motor_control/: motorControl.cpp  motorControl.h
ESP32_code/lib/mpu6050_control/: mpu6050Control.cpp  mpu6050Control.h
ESP32_code/lib/mpu6050_control/MPU6050/: MPU6050.cpp
ESP32_code/lib/path_plan/: pathPlan.cpp  pathPlan.h
ESP32_code/lib/pid_control/: pidControl.cpp  pidControl.h
ESP32_code/lib/serial_print/: serial_print.h
ESP32_code/lib/speed_plan/: speedPlan.cpp  speedPlan.h
ESP32_code/lib/two_wheel_diff_model/: twoWheelDiffModel.cpp  twoWheelDiffModel.h
ESP32_code/src/: main.cpp
common/: enum.h
docs/Model/: 平衡车前端外壳-Body.stl  平衡车底部盖子-Body.stl  平衡车电路板外壳-Body.stl  顶端挡板-Body.stl
docs/PCB/: 两轮差速平衡小车.epro
micro_ros_code/: README.md
ros2_code/: README.md
ros2_code/motion_params_service/: CMakeLists.txt  package.xml
ros2_code/motion_params_service/srv/: MotionParamsService.srv
ros2_code/motion_status_msgs/msg/: MotionStatus.msg
ros2_code/pc_software/: CMakeLists.txt
ros2_code/pc_software/src/: main.cpp
ros2_code/pc_software/src/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow_ui.py
ros2_code/pc_software/src/nodeqthread/: nodeqthread.cpp
ros2_code/src/motion_status_msgs/: CMakeLists.txt  package.xml
ros2_code/src/pc_software/: package.xml
ros2_code/src/pc_software/src/mainwindow/: mainwindow.ui
ros2_code/src/pc_software/src/nodeqthread/: nodeqthread.h
