<?xml version="1.0"?>
<package format="3">
  <name>motion_status_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="18279657653@139.com">linux</maintainer>
  <license>Apache-2.0</license>

  <!-- buildtool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- membership group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>